# arch-coinflip-escrow

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md
app/: .env.example  index.html  package-lock.json  package.json  verify-wallet-path.mjs  vite.config.ts
app/src/: App.tsx  arch.ts  archTx.ts  game.ts  styles.css  vite-env.d.ts  wallet.ts
backend/: Cargo.toml
backend/src/: main.rs
docker/: validator-fix.Dockerfile
docs/: ARCHITECTURE.md  AUDIT.md  SECURITY.md
program/: Cargo.toml
program/examples/: demo.rs  init_config.rs  open_session.rs
program/src/: lib.rs
program/tests/: integration.rs
